DEV: Desenvolvimento pagina HOME

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Serviços</a>
+                            <a class="nav-link" href="/templates/servicos.html">Serviços</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -77,15 +77,14 @@
                     <span class="control" id="close"></span>
                 </div>
             </div>
-            <div class="container">
+            <div class="container" id="box-windo">
                 <div id="github-info">
                     <img id="profile-pic" class="profile-pic" src="" alt="Foto de Perfil">
                     <p id="username" class="info"><span>Usuário:</span> Carregando...</p>
                     <p id="name" class="info"><span>Nome:</span> Carregando...</p>
                     <p id="bio" class="info"><span>Bio:</span> Carregando...</p>
                     <p id="public-repos" class="info"><span>Repositórios Públicos:</span> Carregando...</p>
-                    <p id="followers" class="info"><span>Seguidores:</span> Carregando...</p>
-                    <p id="following" class="info"><span>Seguindo:</span> Carregando...</p>
+                   
                     <div class="languages" id="languages">
                         <h3>Principais Linguagens:</h3>
                         Carregando...
