--- a/index.html
+++ b/index.html
@@ -63,8 +63,20 @@
         <div class="background">
             <div class="ball"></div>
             <div class="ball"></div>
+            <div class="ball"></div>
+            <div class="ball"></div>
+            <div class="ball"></div>
             <div class="ball" id="ball1"></div>
             <div class="ball" id="ball1"></div>
+            <div class="ball" id="ball1"></div>
+            <div class="ball" id="ball1"></div>
+            <div class="ball" id="ball1"></div>
+            <div class="ball" id="ball1"></div>
+            <div class="ball" id="ball2"></div>
+            <div class="ball" id="ball2"></div>
+            <div class="ball" id="ball2"></div>
+            <div class="ball" id="ball2"></div>
+            <div class="ball" id="ball2"></div>
             <div class="ball" id="ball2"></div>
             <div class="ball" id="ball2"></div>
         </div>
