--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-black">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">Frontend <i class='bx bx-devices'></i></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -28,11 +28,9 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/templates/servicos.html">Serviços</a>
-                        </li>
+                     
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
@@ -119,6 +117,7 @@
     <!-- Custom JS -->
     <script src="static/js/scripts.js"></script>
     <script src="static/js/api_git.js"></script>
+    <script src="static/js/cursor.js"></script>
 </body>
 
 </html>
