style: Organização de itens e otimização de processos.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="static/css/responsivo.css">
     <!-- Boxicons CSS -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -26,7 +27,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="bx bx-menu"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -95,7 +96,7 @@
                 <div id="github-info">
                     <img id="profile-pic" class="profile-pic" src="" alt="Foto de Perfil">
                     <p id="username" class="info"><span>Usuário:</span> Carregando...</p>
-                    
+                    <hr>
                     <p id="name" class="info"><span>Nome:</span> Carregando...</p>
                     <hr>
                     <p id="bio" class="info"><span>Bio:</span> Carregando...</p>
@@ -121,7 +122,6 @@
     <!-- Custom JS -->
     <script src="static/js/scripts.js"></script>
     <script src="static/js/api_git.js"></script>
-    <script src="static/js/cursor.js"></script>
 </body>
 
 </html>
