Style: Projeto em andamento

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                         <ul class="list-group">
                             <li class="list-group-item-dark">
                                 <div class="search-container">
-                                    <input id="searchInput" type="text" placeholder="Digite sua pesquisa...">
-                                    <button id="searchButton">Pesquisar</button>
+                                    <input id="searchInput" class="btn btn-dark col-10 bg-dark" type="text" placeholder="Digite sua pesquisa...">
+                                    <button id="searchButton" class="btn btn-dark">Pesquisar</button>
                                 </div>
                                 <div id="results" class="results hidden"></div>
                             </li>
