Style: Projeto em andamento

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <li class="list-group-item-dark">
                                 <div class="search-container">
                                     <input id="searchInput" class="btn btn-dark col-10 bg-dark" type="text" placeholder="Digite sua pesquisa...">
-                                    <button id="searchButton" class="btn btn-dark">Pesquisar</button>
+                                    <button id="searchButton" class="btn btn-dark"><i class='bx bxs-analyse bx-spin bx-rotate-270' ></i></i></button>
                                 </div>
                                 <div id="results" class="results hidden"></div>
                             </li>
